Update AbstractScopedSettings.java